<resources>
    <string name="app_name">Health Check</string>
    <string name="adiciona_medico">Adicionar Médico</string>
    <string name="listar_medico">Listar Medico</string>
    <string name="adiciona_paciente">Adicionar Paciente</string>
    <string name="listar_paciente">Listar Paciente</string>
    <string name="adiciona_consulta">Adicionar Consulta</string>
    <string name="listar_consulta">Listar Consulta</string>
    <string name="nome">Nome</string>
    <string name="crm">CRM</string>
    <string name="rua">Rua</string>
    <string name="numero">Número</string>
    <string name="cidade">Cidade</string>
    <string name="celular">Celular</string>
    <string name="fixo">Fixo</string>
    <string name="uf">UF</string>
    <string name="salvar">Salvar</string>
    <string name="voltar">Voltar</string>
    <string name="menu_principal">Menu Principal</string>
    <string name="listar_medicos">Listar Médicos</string>
    <string name="editar_medico">Editar Médico</string>
    <string name="atualizar">Atualizar</string>
    <string name="excluir">Excluir</string>
    <string name="tipo_sanguineo">Tipo Sanguineo</string>
    <string name="listar_pacientes">Listar Pacientes</string>
    <string name="editar_paciente">Editar Paciente</string>
    <string name="adicionar_consulta">Adicionar Consulta</string>
    <string name="medico">Medico</string>
    <string name="paciente">Paciente</string>
    <string name="data_inicio">Data inicio</string>
    <string name="data_fim">Data fim</string>
    <string name="observacoes">Observações</string>
    <string name="dd_mm_aaaa">DD-MM-AAAA</string>
    <string name="hora_inicio">Hora inicio</string>
    <string name="hh_mm">HH:MM</string>
    <string name="hora_fim">Hora Fim</string>
    <string name="listar_consultas">Listar Consultas</string>
    <string name="editar_consulta">Editar Consulta</string>
    <string-array name="UF">
        <item>AC</item>
        <item>AL</item>
        <item>AM</item>
        <item>AP</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MG</item>
        <item>MS</item>
        <item>MT</item>
        <item>PA</item>
        <item>PB</item>
        <item>PE</item>
        <item>PI</item>
        <item>PR</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RO</item>
        <item>RR</item>
        <item>RS</item>
        <item>SC</item>
        <item>SE</item>
        <item>SP</item>
        <item>TO</item>
    </string-array>
    <string-array name="TipoSangue">
        <item>A-</item>
        <item>A+</item>
        <item>B-</item>
        <item>B+</item>
        <item>AB-</item>
        <item>AB+</item>
        <item>O-</item>
        <item>O+</item>
    </string-array>
</resources>
